--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "clean": "rimraf es lib",
-    "build": "npm run clean & npm run build:es & npm run build:lib",
+    "build": "npm run clean && npm run build:es && npm run build:lib",
     "build:es": "tsc --outDir es --module esnext --target es5",
     "build:lib": "tsc --outDir lib --module commonjs --target es5"
   },
